SERVER-47345 Fix causal consistency bug in $merge code on mongos